	(tinylisp-batch-autoload-quick-build-interactive-from-file): New.
	(tinylisp-batch-generic-command-line): New.
	(tinylisp-file-macro): New.
	(tinylisp-find-file-noselect): New.
	(tinylisp-insert-file-contents): New.
	(tinylisp-with-file-env-macro): Update with more hooks.
	(tinylisp-file-name-add-suffix): New.
	(tinylisp-batch-autoload-generate-loaddefs-file): New.

	* tiny/tiny-setup.el: OBSOLETE file. Add `error' to prevent using it.

	* tiny/tinydebian.el (tinydebian-bug-gnu-emacs-bts-p): Correct
	`gnus-summary-mode' test.
	(tinydebian-:emacs-bts-line-regexp): New.
	(tinydebian-bug-gnu-emacs-bts-string-p): Use
	`tinydebian-:emacs-bts-line-regexp'.
	(tinydebian-bug-gnu-emacs-bts-re-search-email): New.
	(tinydebian-bug-nbr-forward): Adjust regexp for 'bug' and 'Bug'.
	(tinydebian-bug-gnu-emacs-bts-re-search-p): Use
	`tinydebian-bug-gnu-emacs-bts-re-search-email'.

2009-02-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el
	(top level): Rename all Debian variables to tinydebian-:tinydebian-*.
	(tinydebian-bug-gnu-emacs-bts-re-search-p): New.
	(tinydebian-bug-gnu-emacs-bts-p): Use
	`(tinydebian-bug-gnu-emacs-bts-re-search-p):'
	(tinydebian-:emacs-bts-email-address): New. New.
	(tinydebian-:emacs-bts-url-http-package-bugs): New.
	(tinydebian-bug-gnu-emacs-bts-p): Use
	`tinydebian-:emacs-bts-url-http-package-bugs'.
	(tinydebian-:launchpad-url-http-package-bugs): New.
	(tinydebian-bug-url): Use `tinydebian-:launchpad-url-http-package-bugs'
	and `tinydebian-:debian-url-http-package-bugs'.
	(tinydebian-bts-mail-compose-macro): Remove word 'Debian' from
	generated buffer name.
	(tinydebian-bts-email-compose): Support Emacs BTS.
	(tinydebian-current-line-string): New.
	(tinydebian-emacs-bts-email-compose): New.
	(tinydebian-bts-email-compose): Support Emacs BTS control
	messages.
	(end of file): Add to hook `tinydebian-:mail-mode-define-keys-hook'
	function `tinydebian-mail-mode-define-keys'.